--- a/src/components/ImageGrid/style.scss
+++ b/src/components/ImageGrid/style.scss
@@ -1,18 +1,8 @@
-.img-grid {
-  margin: 20px auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 40px;
-}
 .img-wrap:hover {
-  transform:scale(1.05);
+  transform:scale(1.06);
   transition: 0.3s;
 }
 .img-wrap {
-  overflow: hidden;
-  height: 0;
-  padding: 50% 0; /* padding controls height, will always be perfectly square regardless of width */
-  position: relative;
   display:flex;
   justify-content: center;
   align-items: center;
@@ -24,4 +14,5 @@
   min-height: 100%;
   top:0;
   left: 0;
+  border: 1px solid black;
 }
