--- a/src/components/ImageModal/style.scss
+++ b/src/components/ImageModal/style.scss
@@ -5,6 +5,8 @@
   width: 100%;
   height: 100%;
   background: rgba(0,0,0,0.5);
+  animation: fadein 0.7s;
+  opacity: 1;
 }
 
 .backdrop img {
@@ -14,4 +16,30 @@
   margin: 60px auto;
   box-shadow: 3px 5px 7px rgba(0,0,0,0.5);
   border: 3px solid white;
+  animation: bounce ease-out 0.4s;
+  position: relative;
+  top: 0;
+}
+
+@keyframes fadein {
+  from { opacity: 0 }
+  to {opacity: 1}
+}
+
+@keyframes bounce {
+  0% {
+    top: -200%;
+    }
+  60% {
+    top: 50px;
+  }
+  80% {
+    top: -25px;
+  }
+  90% {
+    top: 10px
+  }
+  100% {
+    top: 0; 
+  }
 }
