--- a/src/components/ImageGrid/style.scss
+++ b/src/components/ImageGrid/style.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   transition: 0.3s;
+  position: relative;
 }
 
 .img-wrap img {
@@ -16,3 +17,4 @@
   left: 0;
   border: 1px solid black;
 }
+
