--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -4,5 +4,8 @@ body{
 }
 a {
   text-decoration: none;
-  color: inherit;
+  color: rgba(248, 130, 219, 0.7);
+}
+a:hover {
+  color: rgba(247, 169, 53, 0.7);
 }
