--- a/src/components/Header/border.scss
+++ b/src/components/Header/border.scss
@@ -11,17 +11,6 @@ $borderSize: 5%;
     width: $size;
 }
 
-@keyframes rotate{
-    100%{
-        transform: rotate(360deg);
-    }
-}
-@keyframes rotate2{
-    100%{
-        transform: rotate(360deg);
-    }
-}
-
 .rotato{
     height: $size;
     width: $size;
@@ -34,27 +23,23 @@ $borderSize: 5%;
     
     border-radius: 5px;
     overflow: hidden;
+
+    &:before {
+        content: "";
+        background-image: conic-gradient(
+            $color 20deg,
+            transparent 120deg
+        );
+        height: 150%;
+        width: 150%;
+        position: absolute;
+        left: -25%;
+        top: -25%;
+        animation: rotate 2.5s infinite linear;
+    }
 }
-.rotato:before{
-    content: "";
-    background-image: conic-gradient(
-        $color 20deg,
-        transparent 120deg
-    );
-    height: 150%;
-    width: 150%;
-    position: absolute;
-    left: -25%;
-    top: -25%;
-    animation: rotate 2.5s infinite linear;
-}
 
-
-
-////////////////////!
-
-
-.rotato2{
+.rotato2 {
     height: $size;
     width: $size;
     position: absolute;
@@ -66,35 +51,47 @@ $borderSize: 5%;
     
     border-radius: 5px;
     overflow: hidden;
-}
-.rotato2:before{
-    content: "";
-    background-image: conic-gradient(
-        $color2 20deg,
-        transparent 120deg
-    );
-    height: 150%;
-    width: 150%;
-    position: absolute;
-    left: -25%;
-    top: -25%;
-    transform: rotate(0deg);
-    animation: rotate2 2.5s infinite linear;
+
+    &:before {
+        content: "";
+        background-image: conic-gradient(
+            $color2 20deg,
+            transparent 120deg
+        );
+        height: 150%;
+        width: 150%;
+        position: absolute;
+        left: -25%;
+        top: -25%;
+        transform: rotate(0deg);
+        animation: rotate2 2.5s infinite linear;
+    }
+    
+    &:after {
+        content: "MYGRAM";
+        height: calc(100% - $borderSize);
+        width: calc(100% - $borderSize);
+        position: absolute;
+        background-color: $bgcolor;
+        border-radius: 5px;
+        top: calc($borderSize / 2);
+        left: calc($borderSize / 2);
+        color: $textcolor;
+        display: grid;
+        place-items: center;
+        font-size: 20px;
+        font-weight: 600;
+        letter-spacing: 6px;
+    }
 }
 
-.rotato2:after{
-    content: "MYGRAM";
-    height: calc(100% - $borderSize);
-    width: calc(100% - $borderSize);
-    position: absolute;
-    background-color: $bgcolor;
-    border-radius: 5px;
-    top: calc($borderSize / 2);
-    left: calc($borderSize / 2);
-    color: $textcolor;
-    display: grid;
-    place-items: center;
-    font-size: 20px;
-    font-weight: 600;
-    letter-spacing: 6px;
+@keyframes rotate{
+    100%{
+        transform: rotate(360deg);
+    }
+}
+@keyframes rotate2{
+    100%{
+        transform: rotate(360deg);
+    }
 }
