--- a/src/components/ImageGrid/style.scss
+++ b/src/components/ImageGrid/style.scss
@@ -1,8 +1,3 @@
-.img-wrap:hover {
-  transform:scale(1.05);
-  opacity: 1;
-  transition: 0.3s;
-}
 .img-wrap {
   display:flex;
   justify-content: center;
@@ -11,12 +6,18 @@
   position: relative;
   border: 1px solid rgb(187, 187, 187);
   opacity: 0.9;
-}
-
-.img-wrap img {
-  min-width:100%;
-  min-height: 100%;
-  top:0;
-  left: 0;  
+  
+  &:hover {
+    transform:scale(1.05);
+    opacity: 1;
+    transition: 0.3s;
+  }
+  
+  img {
+    min-width:100%;
+    min-height: 100%;
+    top:0;
+    left: 0; 
+  }
 }
 
