--- a/src/components/ImageModal/style.scss
+++ b/src/components/ImageModal/style.scss
@@ -7,18 +7,18 @@
   background: rgba(0,0,0,0.5);
   animation: fadein 0.7s;
   opacity: 1;
-}
-
-.backdrop img {
-  display: block;
-  max-width: 60%;
-  max-height: 80%;
-  margin: 60px auto;
-  box-shadow: 3px 5px 7px rgba(0,0,0,0.5);
-  border: 3px solid white;
-  animation: bounce ease-out 0.4s;
-  position: relative;
-  top: 0;
+  
+  img {
+    display: block;
+    max-width: 60%;
+    max-height: 80%;
+    margin: 60px auto;
+    box-shadow: 3px 5px 7px rgba(0,0,0,0.5);
+    border: 3px solid white;
+    animation: bounce ease-out 0.4s;
+    position: relative;
+    top: 0;
+  }
 }
 
 @keyframes fadein {
